--- a/ad2.html
+++ b/ad2.html
@@ -6,6 +6,7 @@
 <body>
 <div class="autoalign"> 
 <h1 style="font-size: 100px;text-align: center;font-family:fantasy;"><i><b>FitTracker</b></i></h1>
+<p><a href="Ad.html" style="text-align:center; font-size: 30px;"><img src="home.png" style="width: 50px;height:auto"></a></p>
 </div>
 <hr>
 <div>
@@ -23,6 +24,3 @@
 </div>
 </body>
 </html>
-
-
-
